# ChangeLog for dev-haskell/logict
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/logict/ChangeLog,v 1.4 2014/07/25 09:16:27 slyfox Exp $

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> logict-0.6.0.1.ebuild,
  logict-0.6.0.2.ebuild:
  Drop trailing '.' from description.

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
  Drop redundant '<maintainer>' field, leave only '<herd>'.

*logict-0.6.0.2 (21 Feb 2014)

  21 Feb 2014; Sergei Trofimovich <slyfox@gentoo.org> +logict-0.6.0.2.ebuild:
  Version bump.

*logict-0.6.0.1 (13 Sep 2013)

  13 Sep 2013; Mark Wright <gienah@gentoo.org>
  +files/logict-0.5.0-ghc-6.12.patch, +logict-0.6.0.1.ebuild, +metadata.xml:
  Add logict