@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX logict-0.5.0-ghc-6.12.patch 793 SHA256 47bff84d3917dd0b9e6232a6d16976ec9d50f91d2da93c467fe9e7e697016e8b SHA512 f887b1fd5a05db531196eae501cef8beecb407a1e91fab81e2f5e130183e51c91d43ae83e5640b3b6538c7dfeb82a5b7692380f703d5f7d6ca5baa40caae87dd WHIRLPOOL aa827b876d228d74ecc6f0a3e87e3fe4d42597ef16e0d9daa563a51628e555e9d9e5f44da8e30a16eed99f1982c03e569fe519aa4661321af6df5eb337363d44
 DIST logict-0.6.0.1.tar.gz 5288 SHA256 e2f6e0877ce9323d9401f55e68351e039135060e9d77c1b6b758177abacdf66b SHA512 ebed60ef3d977cdd6038482942447c66ceecd5c5e2ccbd801b510bf06c0dd7ef6f45b7af738ea3b149b58b4ad730ca286c31625eda4880dc71ba09b96e234774 WHIRLPOOL d54435f56fb8b78d7d327bab985f785e59a44b3ee8d1ffdabdbc6dc29435d68811471d74d6f5a8f7dcc7eca9b198e467f425e0d2392ffe0aa2c11e21093f7d75
 DIST logict-0.6.0.2.tar.gz 5370 SHA256 1182b68e8d00279460c7fb9b8284bf129805c07754c678b2a8de5a6d768e161e SHA512 dfb72d006d9b7a5f0d7447d956ea0c3d083e200a616efc4b34fafa0582c2dc7e9369156cf4f51a472b97f7afb6167030edeb84e77c7bc410bfe58a44f0ac4fc4 WHIRLPOOL 395780835fa55373db28b5d006ef260f4ff82f12d4aeeb1bd5bc83fe9a06f2613624a7ffc5e619420c2232b8abe6554b9488c73e71a6c5a016e2a89fc2b85eec
 EBUILD logict-0.6.0.1.ebuild 808 SHA256 6168dc6f63166234a91dc64c0c8eb778be279aa60eff965cbdb0dd3d6faea635 SHA512 ec9af54c7107913bd5818c02354e27dc2d706b4946ff82fe22165bbcbb7f2f538941d945ea9352d885f7de85bd73c915176ea696fb422749c2ebd664f0f21cbd WHIRLPOOL 98463de3eb8a8c1798c7768a98830c60a5c608b407fcc518d255fdebbd414ad9982012f1f776d8ec81c2f96ddb1fbe440f1e5129edf673cc05a00da4e64f0322
-EBUILD logict-0.6.0.2.ebuild 744 SHA256 b3e8b9a0ca76a7ed6ca12a43211bf04af6c4ceb108f1267fc9d4fc537b1ba441 SHA512 3f0de2210a9557ac02d259c8d45a9ad6551c7cc64cbcd672307df1b6df17d8a58300fecc73768712211c132eaca9afecc46dbd5b2859ac55da9c621869ba1abb WHIRLPOOL a1e66bf73feb6254933f250b17d0436b181cb28e5ff283288d51121b82942b03089331e81db8087615b8bd5837f1d5aa95321c737a2c4f6c6a4390250723be2b
-MISC ChangeLog 773 SHA256 15c0fccf21a9cb465573707bc5d0be07a1dd8ecd0e543aa784ae26cfddada42f SHA512 0224c43cd22051cef3413b758a13df48b813678440cec7ed06a1375afe64568e056fddda7a0923096fd31e53c36659868308329078c74337813eb223f7cf4ae5 WHIRLPOOL 348a2c7b1603a9f976ad39ae0370110c4e1da39ea22633e1617e6da7c9a27cedbe86951d060bff3b3f7415266ded08f116326e7f2c9448e4365c0fa7ae6f1b75
+EBUILD logict-0.6.0.2.ebuild 740 SHA256 3798a1e8bcb4fb37306663014f15816f3ac833f9264eff3526c327da36132c57 SHA512 aa64726872858301a11ba4b2f0353fb16ff17ca3f5f2c0e2f7312b9afede97de9f244714f33bccbe24c274784602debdf1f20c2ea3dd041ccf8b9f1a8ea0e6db WHIRLPOOL e8fce1a6ef5242ecf512920099fad3f90ecef34b2b55e781e794188acfda7d4b2fc94b42cc866bb316c9a39f38dd3b38c7955567c0ad879f3b3efd713c786038
+MISC ChangeLog 879 SHA256 65385b770e2c2014d86b2c876fda06053cd405143e0f0b7743ba514995d75934 SHA512 6eebdc3992a83283bd9e3ee72ed60cd70b68559d1811618ec2cf9cf3459ae9dcdadae7440a347ae695124cb69346180d6a7d5d98afed4a1c652c631b5a3d0765 WHIRLPOOL 51ff05e91b892914a1ec894c17c627c5f73c6e3ceb744ddb1d340602910f8944666416263c16182d780c5c3c1d2567db59aedd31326243a00bbd985504f9dc9f
 MISC metadata.xml 481 SHA256 029bbbdf8b130b645bf8fbcf55b7adfb8e9ae3ba21305fe5b91dc81b3493c3ba SHA512 eab5850c0c049feb85d543b88be23934d5797f35569b562434864997031ad19c7aea988b6e0abc09038038726e35bd77ff0f4f1f1bb6681e1eba1847e61520f7 WHIRLPOOL af527cbfa61de88dadf93002a8931725efaceec04aaa21572960302cd63d6d664ab1da999935b3320205a7d9f60e7fbf07344bfa887fd11052c144fd13577959
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJVdb3XAAoJELp701BxlEWfNvUP/j7uoCkQjxjRQcriyyzaygS/
+1gjxPqMwHcgK0InngPyGKdXG8ZhY2Jyn3ngFi9fKL/ygiThTp2bgK/9QupMLc5O7
+32btuDalRrnNRBACN3ucAX+yyomDjQJmqqdDi9EJmuBNsRrHdXXYYY8OYYmSGMKY
+FXZsOYKMj2S+ZbNCqzSGi8hl2IHg6pI17hPQ1m4piFF6yqaSiqrNQQKAzOQVeM2/
+bi1HzJitYlBP4cbu4Y7Ufxk/cWe/2rnYSaXJ2+BoekV0ffyJR+OdlY+Yvvh7A4l1
+F0s4kMDwi1AHwa5yKcGyO000aO6aCeLJZFkzoSKvEND6av3PLHvKt4qiS0VPHwAV
+0GbspwnDEezHlDHduZNej7g3dZt715GM2vYb6YnIUQSnwQ6SeXR0U7VC9D5Dm9H+
+hWt1vHeKNKH8hdYJ99W36vrWHIHmmZMSJwgneqOaV/a7usBUY+v9ADQzNL2sxvGd
+gg902PL/gHCRGWMMd/daAfXQWpQYSvbRWCBVA5LVZYVMTQgY6FphIEleEB8CdJ23
+djsDy11MDlR9ii51lD2xCafQ9pyzLDnear06913SHucsEaVPwT/qfHGMFyaW6FH1
+vZNBwEx2j6bCs9ijkGKKj8wLceCcBsSKhR+OAbnxg+olqaHVKOa00g87VJLXW4n6
+D6m+zMTROqOfsKCQocpw
+=qEV9
+-----END PGP SIGNATURE-----
