@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/logict
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/logict/ChangeLog,v 1.4 2014/07/25 09:16:27 slyfox Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/logict/ChangeLog,v 1.5 2015/06/08 16:07:50 ago Exp $
+
+  08 Jun 2015; Agostino Sarubbo <ago@gentoo.org> logict-0.6.0.2.ebuild:
+  Stable for amd64, wrt bug #550408
 
   25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> logict-0.6.0.1.ebuild,
   logict-0.6.0.2.ebuild:
